--- a/app/src/main/res/layout/activity_late_check.xml
+++ b/app/src/main/res/layout/activity_late_check.xml
@@ -147,6 +147,10 @@
         android:id="@+id/rv_record"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:fadingEdge="horizontal"
+        android:fadingEdgeLength="30dp"
+        android:fillViewport="false"
+        android:requiresFadingEdge="vertical"
         tools:listitem="@layout/item_rv_late_record"
         android:layout_marginBottom="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
