--- a/app/src/main/res/layout/activity_work_done.xml
+++ b/app/src/main/res/layout/activity_work_done.xml
@@ -106,6 +106,10 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="24dp"
+        android:fadingEdge="horizontal"
+        android:fadingEdgeLength="30dp"
+        android:fillViewport="false"
+        android:requiresFadingEdge="vertical"
         tools:listitem="@layout/item_rv_work_done_month"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@id/rl_info"
