[FEAT] 관리자 가입 POST API 연결 완료

--- a/app/src/main/res/drawable/bg_selector_rest_oval.xml
+++ b/app/src/main/res/drawable/bg_selector_rest_oval.xml
@@ -4,6 +4,9 @@
     <item android:drawable="@drawable/oval_fill_yellow" android:state_selected="true" />
 
     <item android:drawable="@drawable/oval_fill_white_stroke_gray"
-        android:state_enabled="false"/>
+        android:state_selected="false"/>
+
+    <item android:drawable="@drawable/oval_fill_custom_white"
+        android:state_enabled="true"/>
 
 </selector>
