--- a/app/src/main/res/layout/activity_add_worker_two.xml
+++ b/app/src/main/res/layout/activity_add_worker_two.xml
@@ -2,6 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -67,6 +69,7 @@
         android:id="@+id/scrollview"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:fillViewport="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -109,10 +112,11 @@
                 android:textColor="#343434"
                 android:letterSpacing="-0.02"
                 android:lineSpacingExtra="-4sp"
-                tools:text="업무리스트 작성하기"/>
+                android:text="업무리스트 작성하기"/>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_to_do_list"
+                android:visibility="gone"
                 android:layout_marginTop="16dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
