--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,16 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".src.main.MainActivity">
+
+    <ImageView
+        android:id="@+id/iv_logo_img"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/logo_image"
+        android:foregroundGravity="center"
+        app:layout_constraintBottom_toTopOf="@id/iv_logo_txt"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed" />
+
+    <ImageView
+        android:id="@+id/iv_logo_txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/logo_text"
+        android:layout_marginTop="15dp"
+        android:foregroundGravity="center"
+        app:layout_constraintBottom_toTopOf="@id/tv_main"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/iv_logo_img"
+        app:layout_constraintVertical_chainStyle="packed" />
 
     <TextView
-        android:text="임시 스플래쉬"
-        android:textSize="30sp"
-        android:textColor="@color/black"
-        android:textStyle="bold"
+        android:id="@+id/tv_main"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="17dp"
+        android:fontFamily="@font/roboto_medium"
+        android:letterSpacing="-0.03"
+        android:lineHeight="33sp"
+        android:lineSpacingExtra="17sp"
+        android:text="알바집으로 알바관리 A-Z까지"
+        android:textAlignment="center"
+        android:textColor="@color/customBlack"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/iv_logo_txt" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
