[FIX] 로그인 -> position 0 -> 사용자 이름 띄우기

--- a/app/src/main/res/layout/child_fragment_no_worker_list.xml
+++ b/app/src/main/res/layout/child_fragment_no_worker_list.xml
@@ -6,6 +6,7 @@
     android:background="#f8f8f8">
 
     <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/ll_no_worker"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
