--- a/app/src/main/res/layout/fragment_input_info.xml
+++ b/app/src/main/res/layout/fragment_input_info.xml
@@ -56,7 +56,7 @@
         app:layout_constraintTop_toBottomOf="@id/tv_name">
 
         <EditText
-            android:id="@+id/et_first_name"
+            android:id="@+id/et_last_name"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginHorizontal="16dp"
@@ -87,7 +87,7 @@
         app:layout_constraintTop_toBottomOf="@id/tv_name">
 
         <EditText
-            android:id="@+id/et_name"
+            android:id="@+id/et_first_name"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginHorizontal="16dp"
