--- a/app/src/main/res/layout/child_fragment_wrote.xml
+++ b/app/src/main/res/layout/child_fragment_wrote.xml
@@ -6,6 +6,42 @@
     android:background="#f8f8f8"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_no_wrote_list"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="175dp">
+        <ImageView
+            android:id="@+id/iv_alert_no_wrote"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:background="@null"
+            android:src="@drawable/img_alert_36_px"
+            app:layout_constraintBottom_toTopOf="@id/tv_alert"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_chainStyle="packed" />
+        <TextView
+            android:id="@+id/tv_alert"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="14dp"
+            android:gravity="center_horizontal"
+            android:text="작성한 글이 없어요."
+            android:textColor="#a3a3a3"
+            android:textSize="14sp"
+            android:textStyle="normal"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/iv_alert_no_wrote"
+            app:layout_constraintStart_toStartOf="@id/iv_alert_no_wrote"
+            app:layout_constraintTop_toBottomOf="@id/iv_alert_no_wrote" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipelayout"
         android:layout_width="match_parent"
@@ -60,49 +96,10 @@
                     android:layout_marginTop="10dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
-
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginVertical="175dp"
-                    android:layout_gravity="center">
-
-                    <ImageView
-                        android:id="@+id/iv_alert_no_wrote"
-                        android:layout_width="36dp"
-                        android:layout_height="36dp"
-                        android:background="@null"
-                        android:src="@drawable/img_alert_36_px"
-                        app:layout_constraintBottom_toTopOf="@id/tv_alert"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_chainStyle="packed" />
-
-                    <TextView
-                        android:id="@+id/tv_alert"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="14dp"
-                        android:gravity="center_horizontal"
-                        android:text="작성한 글이 없어요."
-                        android:textColor="#a3a3a3"
-                        android:textSize="14sp"
-                        android:textStyle="normal"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="@id/iv_alert_no_wrote"
-                        app:layout_constraintStart_toStartOf="@id/iv_alert_no_wrote"
-                        app:layout_constraintTop_toBottomOf="@id/iv_alert_no_wrote" />
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-
             </LinearLayout>
 
         </androidx.core.widget.NestedScrollView>
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
