--- a/app/src/main/res/layout/child_fragment_worker_list.xml
+++ b/app/src/main/res/layout/child_fragment_worker_list.xml
@@ -43,10 +43,10 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_worker_list"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginVertical="16dp"
-        android:layout_marginHorizontal="24dp"
+        android:layout_marginHorizontal="30dp"
         tools:listitem="@layout/item_rv_worker_card"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
