--- a/app/src/main/res/layout/fragment_w_mypage.xml
+++ b/app/src/main/res/layout/fragment_w_mypage.xml
@@ -84,7 +84,7 @@
                         android:text="평일마감" />
 
                     <TextView
-                        android:id="@+id/tv_manager_name"
+                        android:id="@+id/tv_worker_name"
                         android:layout_toEndOf="@id/tv_position"
                         android:layout_below="@id/tv_shop_name"
                         android:layout_width="wrap_content"
