--- a/app/src/main/res/layout/child_fragment_worker_list.xml
+++ b/app/src/main/res/layout/child_fragment_worker_list.xml
@@ -45,8 +45,10 @@
         android:id="@+id/rv_worker_list"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:spanCount="3"
         android:layout_marginVertical="16dp"
-        android:layout_marginHorizontal="30dp"
+        android:layout_marginHorizontal="12dp"
         tools:listitem="@layout/item_rv_worker_card"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
