--- a/app/src/main/res/layout/item_rv_worker_card.xml
+++ b/app/src/main/res/layout/item_rv_worker_card.xml
@@ -2,9 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     android:id="@+id/cl_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="96dp"
+    android:layout_width="match_parent"
     android:layout_height="143dp"
     android:layout_marginBottom="11dp"
+    android:layout_marginHorizontal="12dp"
     android:background="@drawable/bg_card_deactive"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
