--- a/app/src/main/res/layout/activity_setting_alarm.xml
+++ b/app/src/main/res/layout/activity_setting_alarm.xml
@@ -83,98 +83,53 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="52dp"
-            android:background="@drawable/rectangle_fill_white_radius_top_20">
+            android:layout_height="72dp"
+            android:animateLayoutChanges="true"
+            android:background="@drawable/rectangle_fill_white_radius_20">
 
             <TextView
+                android:id="@+id/tv_alarm"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="공지사항"
+                android:text="알림"
                 android:layout_marginStart="24dp"
-                android:layout_centerVertical="true"
+                android:layout_marginTop="17dp"
                 android:textStyle="normal"
                 android:textSize="16sp"
                 android:textColor="#333333"
                 android:letterSpacing="-0.03"
                 android:fontFamily="@font/roboto_medium"/>
 
-            <Switch
-                android:layout_width="wrap_content"
-                android:layout_height="31dp"
-                android:switchMinWidth="0dp"
-                android:textOff=""
-                android:textOn=""
-                android:thumbTextPadding="15dp"
-                android:background="@null"
-                android:layout_centerVertical="true"
-                android:track="@drawable/custom_switch_setting"
-                android:thumb="@drawable/switch_setting_thumb"
-                android:layout_alignParentEnd="true"
-                android:layout_marginEnd="24dp"/>
-        </RelativeLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginHorizontal="24dp"
-                android:background="#e2e2e2">
-            </View>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="52dp"
-            android:background="@color/white">
             <TextView
+                android:id="@+id/tv_info"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="게시판"
-                android:layout_marginStart="24dp"
-                android:layout_centerVertical="true"
+                android:fontFamily="sans-serif-medium"
                 android:textStyle="normal"
-                android:textSize="16sp"
-                android:textColor="#333333"
+                android:textSize="12sp"
+                android:textColor="#a3a3a3"
                 android:letterSpacing="-0.03"
-                android:fontFamily="@font/roboto_medium"/>
+                android:layout_below="@id/tv_alarm"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="4dp"
+                android:text="새로운 공지사항과 게시글, 급여일 알림"/>
 
-            <Switch
-                android:layout_width="wrap_content"
-                android:layout_height="31dp"
-                android:switchMinWidth="0dp"
-                android:textOff=""
-                android:textOn=""
-                android:thumbTextPadding="15dp"
-                android:background="@null"
-                android:layout_centerVertical="true"
-                android:track="@drawable/custom_switch_setting"
-                android:thumb="@drawable/switch_setting_thumb"
-                android:layout_alignParentEnd="true"
-                android:layout_marginEnd="24dp"/>
-        </RelativeLayout>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginHorizontal="24dp"
-            android:background="#e2e2e2">
-        </View>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="52dp"
-            android:background="@drawable/rectangle_fill_white_radius_bottom_20">
             <TextView
+                android:id="@+id/tv_alarm_status"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="급여일"
-                android:layout_marginStart="24dp"
-                android:layout_centerVertical="true"
+                android:fontFamily="sans-serif-medium"
                 android:textStyle="normal"
                 android:textSize="16sp"
-                android:textColor="#333333"
+                android:textColor="#ffc400"
                 android:letterSpacing="-0.03"
-                android:fontFamily="@font/roboto_medium"/>
+                android:layout_toEndOf="@id/tv_alarm"
+                android:layout_marginTop="16dp"
+                android:layout_marginStart="4dp"
+                android:text="ON"/>
 
             <Switch
+                android:id="@+id/switch_alarm"
                 android:layout_width="wrap_content"
                 android:layout_height="31dp"
                 android:switchMinWidth="0dp"
