--- a/app/src/main/res/layout/child_fragment_card_position_info.xml
+++ b/app/src/main/res/layout/child_fragment_card_position_info.xml
@@ -16,24 +16,12 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/tv_position"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="23dp"
-                android:layout_marginStart="24dp"
-                android:textStyle="bold"
-                android:textSize="18sp"
-                android:textColor="#333333"
-                android:letterSpacing="-0.03"
-                android:text="평일 마감"/>
-
 
             <LinearLayout
                 android:id="@+id/sec_ll"
                 android:layout_marginHorizontal="24dp"
                 android:paddingHorizontal="24dp"
-                android:layout_marginTop="14dp"
+                android:layout_marginTop="24dp"
                 android:background="@drawable/rectangle_fill_white_radius_20"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -200,6 +188,7 @@
             </LinearLayout>
 
             <RelativeLayout
+                android:id="@+id/rl_delete_btn"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginHorizontal="24dp"
@@ -210,14 +199,14 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textStyle="bold"
-                    android:textSize="16sp"
-                    android:textColor="#343434"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
                     android:letterSpacing="-0.03"
                     android:lineSpacingExtra="4sp"
-                    android:layout_centerVertical="true"
-                    android:layout_centerHorizontal="true"
-                    android:text="삭제하기"/>
+                    android:text="삭제하기"
+                    android:textColor="#343434"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
 
             </RelativeLayout>
 
