--- a/app/src/main/res/drawable/rectangle_fill_light_yellow_radius_main_yellow_20.xml
+++ b/app/src/main/res/drawable/rectangle_fill_light_yellow_radius_main_yellow_20.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <stroke
-        android:color="#ffd85c"
+        android:color="#ffefbc"
         android:width="2dp"/>
 
     <corners
