--- a/app/src/main/res/layout/fragment_m_home.xml
+++ b/app/src/main/res/layout/fragment_m_home.xml
@@ -54,19 +54,46 @@
                     android:textColor="#848484"
                     android:letterSpacing="-0.03"
                     android:text="전체보기 >"
-                    android:layout_marginEnd="13dp"
+                    android:layout_marginEnd="27dp"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginTop="39dp"/>
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <RelativeLayout
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginBottom="36dp"
                 android:background="@color/white">
 
 
-            </RelativeLayout>
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="49dp"
+                    android:layout_marginTop="16dp">
+
+                    <androidx.viewpager2.widget.ViewPager2
+                        android:id="@+id/vp_home_communicate"
+                        android:clipToPadding="false"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"/>
+                </RelativeLayout>
+
+                <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
+                    android:id="@+id/dots_indicator"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    app:dotsColor="#ebebeb"
+                    android:layout_marginTop="12dp"
+                    app:dotsCornerRadius="8dp"
+                    app:dotsSize="4dp"
+                    app:dotsSpacing="4dp"
+                    app:dotsWidthFactor="2.5"
+                    app:selectedDotColor="#ffc400"
+                    app:progressMode="false"/>
+            </LinearLayout>
 
         </LinearLayout>
 
